fixe overflow issue

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ main {
 }
 .body-container .hero-section {
     width: 100%;
-    height: 90vh;
+    min-height: 90vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -158,6 +158,7 @@ main {
     color: white;
     font-size: 40px;
     width: 500px;
+    padding-top: 20px;
 }
 .section-detail h2{
     position: relative;
